# game-of-life-wasm-rust

./: README.md  index.html  main.js  package.json
gol-lib/: Cargo.toml
gol-lib/src/: lib.rs
