[package]
name = "gol-lib"
version = "0.1.0"
authors = [ "" ]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'console',
]